--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "class-validator": "^0.14.1",
     "crypto-js": "^4.2.0",
     "ioredis": "^5.6.0",
+    "moment-timezone": "^0.5.48",
     "mysql2": "^3.14.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
